<resources>
    <string name="app_name">Path in Palm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="options_menu_item_map_weekday">show weekday daytime routes</string>
    <string name="options_menu_item_map_weekend">show weekday night &amp; weekend routes</string>
    <string name="options_menu_item_map_show_all">show all routes</string>
</resources>
